--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" type="style.css" href="">
 	<meta charset="utf-8">
 	<title></title>
 </head>
 <body>
-	<img src="LeWagon_Circle.png">
+	<div id="container">
+	<img id="logo" src="LeWagon_Circle.png">
 	<h1>Coming Soon... LeWagon</h1>
+	</div>
 </body>
 </html>
